--- a/server/views/managepatients.html
+++ b/server/views/managepatients.html
@@ -53,7 +53,7 @@
     <!-- Navigation -->
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand py-0" href="/">  <img class="img-responsive" width="50px" height="" src="images/brain-logo-off.png"></a>
+            <a class="navbar-brand py-0" href="frontpage">  <img class="img-responsive" width="50px" height="" src="images/brain-logo-off.png"></a>
             <p class="navbar-text text-uppercase">ImmersiveMind</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" style="z-index: 1" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span> </button>
